# kindle-notes-to-md

./: .gitignore  README.md  TODO.md  kindle_notes_to_md.py  pyproject.toml
